samples/_failures_safe/1761002467_ada127_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6aa73016.c:131: error: expected ‘;’, ‘,’ or ‘)’ at end of input
